--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Jacob Klein's Blog Posts</title>
 </head>
 <body>
-    test main new ADASDJSADJA
+    <a href="week1Post.html">Week 1</a>
 </body>
 </html>
