--- a/week1Post.html
+++ b/week1Post.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is the header on my first webpage!</h1>
+    <h1>This is the header on my first blog post!</h1>
     <hr />
     <p>
-    This is the start of my first paragraph. <br/>I am brand new to HTML so I
+    This is the start of my first paragraph. It was written on 09/02/21<br/>I am brand new to HTML so I
     decided to look up a couple crash-course style videos. <br/>One of the most
     enjoyable and consumable ones I found was
     <a href="https://www.youtube.com/watch?v=bWPMSSsVdPk">this</a> one on youtube.<br/>
