--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="week1Post.html">Week 1</a>
     <a href="week2Post.html">Week 2</a>
+    <a href="week3Post.html">Week 3</a>
 </body>
 </html>
