--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob Klein's Blog Posts</title>
+    <style>
+        body{
+            background-color: lightgray;
+            text-align: center;
+        }
+    
+        main {
+            width: 50%;
+            margin: 0 auto;
+            padding: 5px;
+            padding-left: 10px;
+            padding-right: 10px;
+            box-sizing: border-box;
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
-    <a href="week1Post.html">Week 1</a>
-    <a href="week2Post.html">Week 2</a>
-    <a href="week3Post.html">Week 3</a>
+    <h1>Jacob Klein's Blog Posts</h1>
+    <main>
+        <a href="week1Post.html">Week 1</a><br><br>
+        <a href="week2Post.html">Week 2</a><br><br>
+        <a href="week3Post.html">Week 3</a><br><br>
+        <a href="week4Post.html">Week 4</a><br>
+    </main>
+    
 </body>
 </html>
