--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <a href="week1Post.html">Week 1</a><br><br>
         <a href="week2Post.html">Week 2</a><br><br>
         <a href="week3Post.html">Week 3</a><br><br>
-        <a href="week4Post.html">Week 4</a><br>
+        <a href="week4Post.html">Week 4</a><br><br>
+        <a href="week5Post.html">Week 4</a><br>
     </main>
     
 </body>
