--- a/FinalPost.html
+++ b/FinalPost.html
@@ -47,6 +47,9 @@
             also being able to go back later and change things and understand what
             does and doesn't work.
         </p>
+        <p>
+            Click <a href="index.html">here</a> to return to the home page!
+        </p>
     </main>
     
 </body>
