--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <a href="week2Post.html">Week 2</a><br><br>
         <a href="week3Post.html">Week 3</a><br><br>
         <a href="week4Post.html">Week 4</a><br><br>
-        <a href="week5Post.html">Week 5</a><br>
+        <a href="week5Post.html">Week 5</a><br><br>
+        <a href="FinalPost.html">Final</a><br>
     </main>
     
 </body>
